--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "onlineticket",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A node.js CLI for reading barcodes on public transport tickets (e.g. Deutsche Bahn).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcov ",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "preferGlobal": true,
   "bin": "./index.js",
@@ -32,7 +33,13 @@
     "clear": "0.0.1",
     "commander": "^2.13.0",
     "figlet": "^1.2.0",
-    "treeify": "^1.0.1",
-    "uic-918-3": "^0.1.1"
+    "treeify": "git+https://github.com/notatestuser/treeify.git",
+    "uic-918-3": "^0.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.0"
   }
 }
